Them chuc nang thanh toan chuyen khoan tao qr tu dong va luulai lich su giao dich

--- a/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Trang_Chu.form
+++ b/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Trang_Chu.form
@@ -66,14 +66,14 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Qu&#x1ea3;n L&#xfd; Th&#x1ed1;ng K&#xea;"/>
+        <Property name="text" type="java.lang.String" value="Th&#x1ed1;ng k&#xea;"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="40" y="630" width="-1" height="-1"/>
+          <AbsoluteConstraints x="60" y="630" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
