--- a/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Hoa_Don.form
+++ b/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Hoa_Don.form
@@ -456,6 +456,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBoxphuongThucThanhToanActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
@@ -474,6 +477,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Tr&#x1edf; v&#x1ec1;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
