--- a/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Trang_Chu.form
+++ b/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Trang_Chu.form
@@ -104,6 +104,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Nh&#xe0; Cung C&#x1ea5;p"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton6ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="460" y="630" width="-1" height="-1"/>
