--- a/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Thong_Ke.form
+++ b/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Thong_Ke.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -76,9 +76,10 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="3">
                 <StringItem index="0" value="Ng&#xe0;y"/>
-                <StringItem index="1" value="S&#x1ea3;n ph&#x1ea9;m"/>
+                <StringItem index="1" value="Th&#xe1;ng"/>
+                <StringItem index="2" value="S&#x1ea3;n ph&#x1ea9;m"/>
               </StringArray>
             </Property>
           </Properties>
