Hoan thanh frm cuoi va hoan thanh so bo du an

--- a/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Trang_Chu.form
+++ b/src/main/java/com/mycompany/phan_mem_quan_ly_tap_hoa/frm_Trang_Chu.form
@@ -81,6 +81,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Qu&#x1ea3;n L&#xfd; H&#xf3;a &#x110;&#x1a1;n"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="240" y="630" width="-1" height="-1"/>
